# example1

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.cmd  build.sh  default.sh  default_cpp.sh  default_cs.sh  default_ios_objc.sh  default_java.sh  default_mac_objc.sh  default_python.sh  default_tvos_objc.sh  default_watchos_objc.sh  emscripten.cmd  emscripten.sh  vs.cmd  vs_cpp.cmd  vs_cs.cmd  vs_java.cmd  vs_java_clang.cmd  vs_python.cmd  xcode_cs.sh  xcode_ios_objc.sh  xcode_ios_objc_sim.sh  xcode_mac_java.sh  xcode_mac_objc.sh  xcode_mac_python.sh  xcode_tvos_objc.sh  xcode_watchos_objc.sh
generated_reference/bridge/java/: abstruct_element.cpp  chat.cpp  contact.cpp  contact.h  contact_decl.h  element.cpp  extended_contact.cpp  model.cpp  model.h  model_decl.h  session.cpp  session.h  session_decl.h
generated_reference/bridge/java/com/scapix/chat/: AbstructElement.java  Contact.java  Element.java  ExtendedContact.java  Model.java  Session.java
generated_reference/bridge/js/: abstruct_element.cpp  contact.cpp  element.cpp  extended_contact.cpp  model.cpp  session.cpp
generated_reference/bridge/objc/chat/bridge/: AbstructElement.h  AbstructElement.mm  Contact.h  Contact.mm  Element.h  Element.mm  ExtendedContact.h  ExtendedContact.mm  Model.h  Model.mm  Session.h  Session.mm
generated_reference/bridge/python/: abstruct_element.cpp  chat.cpp  contact.cpp  element.cpp  extended_contact.cpp  model.cpp  session.cpp
project/: CMakeLists.txt  default_cpp.sh  default_java.sh  default_python.sh  emscripten.cmd  emscripten.sh  make_java.sh  make_python.sh  vs_cpp.cmd  vs_java.cmd  vs_python.cmd  xcode_ios_objc.sh  xcode_ios_objc_sim.sh  xcode_mac_java.sh  xcode_mac_objc.sh  xcode_mac_python.sh
source/chat/: contact.cpp  contact.h  extended_contact.h  model.cpp  model.h  session.cpp  session.h
source/chat/folder/: abstract_element.h  abstruct_element.h  element.h
source/chat/platform/: config.h  device.h
source/chat/platform/android/: device.cpp  device.h
source/chat/platform/apple/: device.h  device.mm
source/chat/platform/generic/: device.h
source/chat/platform/java/: device.cpp  device.h  test.cpp
source/chat/platform/windows/: device.h
ui/android/: .gitignore  build.gradle
ui/android/app/: .gitignore  build.gradle  proguard-rules.pro
ui/android/app/src/androidTest/java/com/example/chat/: ExampleInstrumentedTest.java
ui/android/app/src/androidTest/java/com/scapix/chat/: ExampleInstrumentedTest.java
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/java/com/example/chat/: MainActivity.java
ui/android/app/src/main/java/com/scapix/chat/: MainActivity.java
ui/android/app/src/main/res/layout/: content_main.xml
ui/android/app/src/main/res/menu/: menu_main.xml
ui/android/app/src/main/res/values/: strings.xml
ui/android/app/src/test/java/com/example/chat/: ExampleUnitTest.java
ui/android/app/src/test/java/com/scapix/chat/: ExampleUnitTest.java
ui/android/gradle/wrapper/: gradle-wrapper.properties
ui/cpp/: CMakeLists.txt
ui/cpp/source/: main.cpp
ui/cs/: CMakeLists.txt
ui/cs/source/: Form1.Designer.cs  Form1.cs  Program.cs
ui/cs/source/Properties/: AssemblyInfo.cs
ui/ios/chat.xcworkspace/: contents.xcworkspacedata
ui/ios/chat/chat/: AppDelegate.swift  TestObjC.h  TestObjC.m  ViewController.swift  chat-Bridging-Header.h
ui/ios/chat/chat.xcodeproj/: project.pbxproj
ui/ios/chat/chat.xcodeproj/xcshareddata/xcschemes/: chat.xcscheme
ui/java/: CMakeLists.txt  MANIFEST.MF  compile.cmd  compile.sh  run.cmd  run.sh  run_clang.cmd
ui/java/com/example/chat/: Chat.java
ui/java/com/scapix/chat/: Chat.java
ui/js/: serve.cmd  serve.sh  test.html
ui/macos/chat.xcworkspace/: contents.xcworkspacedata
ui/macos/chat/chat/: AppDelegate.swift  Info.plist  TestObjC.m  ViewController.swift  chat-Bridging-Header.h
ui/macos/chat/chat.xcodeproj/: project.pbxproj
ui/macos/chat/chat.xcodeproj/xcshareddata/xcschemes/: chat.xcscheme
ui/macos/chat/chat/Base.lproj/: Main.storyboard
ui/python/: run.py  test_enum.py  test_override.py  test_struct.py
